crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_data__bytes.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_data.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (con data (B #6e617368)) of
  DataB payload#2 -> payload#2
  _ -> trace "cold" in error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_3
    (force
      [[[[[[(force (builtin chooseData)) generated_3]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay [(lam payload_2 payload_2) [(builtin unBData) generated_3]])]))
    (con data (B #6e617368))])
--- optimized Core
case@Data (con data (B #6e617368)) of
  DataB payload#1 -> payload#1
  _ -> trace "cold" in error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    [(lam builtin_5
      [(lam partial_6
        [(lam generated_4
          (force
            [[[[[[builtin_5 generated_4] (delay (force [partial_6 (delay (error))]))]
              (delay (force [partial_6 (delay (error))]))]
              (delay (force [partial_6 (delay (error))]))]
              (delay (force [partial_6 (delay (error))]))]
              (delay [(lam payload_2 payload_2) [(builtin unBData) generated_4]])]))
          (con data (B #6e617368))])
        [builtin_3 (con string "cold")]])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
case@Data (con data (B #6e617368)) of
  DataB payload#2 -> payload#2
  _ -> trace "cold" in error
--- isolated folded Core
let payload#2 : bytes = (con bytestring #6e617368) in
payload#2
--- isolated cleaned Core
(con bytestring #6e617368)
--- isolated UPLC before
(program 1.1.0
  [(lam generated_3
    (force
      [[[[[[(force (builtin chooseData)) generated_3]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay [(lam payload_2 payload_2) [(builtin unBData) generated_3]])]))
    (con data (B #6e617368))])
--- isolated UPLC after
(program 1.1.0 (con bytestring #6e617368))
--- result
(con bytestring #6e617368)
--- logs
[]
