crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_data__complete_bytes.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_data.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (con data (B #6e617368)) of
  DataI unused#6 -> trace "bytes" in 0
  DataB unused#7 -> trace "bytes" in 1
  DataList unused#8 -> trace "bytes" in 2
  DataMap unused#9 -> trace "bytes" in 4
  DataConstr unused#10 -> trace "bytes" in 6
  _ -> error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_11
    (force
      [[[[[[(force (builtin chooseData)) generated_11]
        (delay
          (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 6))]))]
        (delay
          (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 4))]))]
        (delay
          (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 2))]))]
        (delay
          (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 0))]))]
        (delay
          (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 1))]))]))
    (con data (B #6e617368))])
--- optimized Core
case@Data (con data (B #6e617368)) of
  DataI unused#1 -> trace "bytes" in 0
  DataB unused#2 -> trace "bytes" in 1
  DataList unused#3 -> trace "bytes" in 2
  DataMap unused#4 -> trace "bytes" in 4
  DataConstr unused#5 -> trace "bytes" in 6
  _ -> error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_12
    [(lam builtin_13
      [(lam partial_14
        [(lam generated_11
          (force
            [[[[[[builtin_13 generated_11] (delay (force [partial_14 (delay (con integer 6))]))]
              (delay (force [partial_14 (delay (con integer 4))]))]
              (delay (force [partial_14 (delay (con integer 2))]))]
              (delay (force [partial_14 (delay (con integer 0))]))]
              (delay (force [partial_14 (delay (con integer 1))]))]))
          (con data (B #6e617368))])
        [builtin_12 (con string "bytes")]])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
case@Data (con data (B #6e617368)) of
  DataI unused#6 -> trace "bytes" in 0
  DataB unused#7 -> trace "bytes" in 1
  DataList unused#8 -> trace "bytes" in 2
  DataMap unused#9 -> trace "bytes" in 4
  DataConstr unused#10 -> trace "bytes" in 6
  _ -> error
--- isolated folded Core
let unused#7 : bytes = (con bytestring #6e617368) in
trace "bytes" in 1
--- isolated cleaned Core
trace "bytes" in 1
--- isolated UPLC before
(program 1.1.0
  [(lam generated_11
    (force
      [[[[[[(force (builtin chooseData)) generated_11]
        (delay
          (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 6))]))]
        (delay
          (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 4))]))]
        (delay
          (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 2))]))]
        (delay
          (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 0))]))]
        (delay
          (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 1))]))]))
    (con data (B #6e617368))])
--- isolated UPLC after
(program 1.1.0
  (force [[(force (builtin trace)) (con string "bytes")] (delay (con integer 1))]))
--- result
(con integer 1)
--- logs
["bytes"]
