crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_data__complete_empty_map.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_data.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (con data (Map [])) of
  DataI unused#21 -> trace "empty_map" in 0
  DataB unused#22 -> trace "empty_map" in 1
  DataList unused#23 -> trace "empty_map" in 2
  DataMap unused#24 -> trace "empty_map" in 4
  DataConstr unused#25 -> trace "empty_map" in 6
  _ -> error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_26
    (force
      [[[[[[(force (builtin chooseData)) generated_26]
        (delay
          (force
            [[(force (builtin trace)) (con string "empty_map")] (delay (con integer 6))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "empty_map")] (delay (con integer 4))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "empty_map")] (delay (con integer 2))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "empty_map")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "empty_map")] (delay (con integer 1))]))]))
    (con data (Map []))])
--- optimized Core
case@Data (con data (Map [])) of
  DataI unused#1 -> trace "empty_map" in 0
  DataB unused#2 -> trace "empty_map" in 1
  DataList unused#3 -> trace "empty_map" in 2
  DataMap unused#4 -> trace "empty_map" in 4
  DataConstr unused#5 -> trace "empty_map" in 6
  _ -> error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_12
    [(lam builtin_13
      [(lam partial_14
        [(lam generated_11
          (force
            [[[[[[builtin_13 generated_11] (delay (force [partial_14 (delay (con integer 6))]))]
              (delay (force [partial_14 (delay (con integer 4))]))]
              (delay (force [partial_14 (delay (con integer 2))]))]
              (delay (force [partial_14 (delay (con integer 0))]))]
              (delay (force [partial_14 (delay (con integer 1))]))]))
          (con data (Map []))])
        [builtin_12 (con string "empty_map")]])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
case@Data (con data (Map [])) of
  DataI unused#21 -> trace "empty_map" in 0
  DataB unused#22 -> trace "empty_map" in 1
  DataList unused#23 -> trace "empty_map" in 2
  DataMap unused#24 -> trace "empty_map" in 4
  DataConstr unused#25 -> trace "empty_map" in 6
  _ -> error
--- isolated folded Core
let unused#24 : list (pair Data Data) = (con (list (pair data data)) []) in
trace "empty_map" in 4
--- isolated cleaned Core
trace "empty_map" in 4
--- isolated UPLC before
(program 1.1.0
  [(lam generated_26
    (force
      [[[[[[(force (builtin chooseData)) generated_26]
        (delay
          (force
            [[(force (builtin trace)) (con string "empty_map")] (delay (con integer 6))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "empty_map")] (delay (con integer 4))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "empty_map")] (delay (con integer 2))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "empty_map")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "empty_map")] (delay (con integer 1))]))]))
    (con data (Map []))])
--- isolated UPLC after
(program 1.1.0
  (force
    [[(force (builtin trace)) (con string "empty_map")] (delay (con integer 4))]))
--- result
(con integer 4)
--- logs
["empty_map"]
